--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,7 @@
         <config-file target="res/xml/config.xml" parent="/*">
           
     <feature name="PayPal">
-        <param name="android-package" value="com.huronasolutions.plugins.PaypalPlugin.PayPal" />
+        <param name="android-package" value="com.huronasolutions.plugins.PaypalPlugin" />
     </feature>
         </config-file>
 
