Changed successCallback to completionCallback in Paypal.js Changed Feature name from PayPal to Paypal in Plugin.xml
Bug fix: Changed to match the callback variable names passed into the function and fixes
Feature name matches the java class name

--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
           
-    <feature name="PayPal">
+    <feature name="Paypal">
         <param name="android-package" value="com.huronasolutions.plugins.PaypalPlugin" />
     </feature>
         </config-file>
